 * Fix many projectiles not being affected by Heavy Wind after turn end
 * Fix hog getting stuck when opening parachute right after a shoryuken digging through land
 * Fix game hanging if computer hog has nothing to attack
 * Fix hog sometimes not falling after resurrection
 * Fix hog not returning from TimeBox when all land was destroyed

Campaigns:
 + A Space Adventure: Spacetrip: Meteorite appears blown-up after victory
 * A Classic Fairytale: Mission 1: Fix possibility of getting stuck in “Leap of Faith” section
 * A Space Adventure: The First Stop: Fix broken victory condition when eliminating minions
 * A Space Adventure: Killing the Specialists: Don't award player health if enemy hurts itself

Styles:
 + Racer: Allow to set turn time in game scheme
 + Racer: Reset mines, air mines and sticky mines every turn
 * Racer: Resize waypoints in custom-sized drawn maps
 * Mutant: Fix impossible to become mutant after mutant is gone

Content:
 + New flags: serbia, montenegro
 + New hat: zoo_panda

Graphics / user interface:
 + Add dynamite fuse and impact sounds
 + Themes: Add fade-in and fade-out effects for background flakes
 + Themes: Make Sudden Death jellyfish in Underwater theme rise
 + In-Game chat size can now be adjusted. Hold Ctrl and press -, + or = while in chat input. Hold Shift for finer control
 + The intial in-game chat size can be configured in the Frontend's “Video” settings tab
 + Various small HUD tweaks

Frontend:
 + Sort ammos in weapon scheme editor
 * Fix weapon schemes sometimes not being saved properly
 * Fix world edge not being changable under macOS

Lua:
 + Add RopeKnocking library

====================== 1.0.0 =======================
Highlights:
 + Campaigns now respect your team identity instead of overwriting it
 + Single missions now support team selection and track your progress
 + Challenges track the team's highscores
 + Hand-drawn maps can now be scaled with slider
 + Quick games are more random